[gd_scene load_steps=2 format=3 uid="uid://bjdf47qbor0rh"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_luxh3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_luxh3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start  Training"

[node name="LoadButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Load previous"

[node name="ExitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
